--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@
 	box-sizing: border-box;
 	font-family: Helvetica, Arial, sans-serif;
 }
+
+img {
+	display: block;
+	max-width: 100%;
+	margin: 0 auto;
+}
